# bot

./: Cargo.toml  Dockerfile  Makefile
k8s/: bot.yaml  kustomization.yaml
src/: discord.rs  lib.rs  pokemon.rs
