[package]
name = "interactions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
futures = "0.3.15"
hyper = { version = "0.14.10", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.21"
sodiumoxide = "0.2.7"
tokio = { version = "1.8.1", features = ["full"] }
